--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -1,55 +1,74 @@
 services:
-  sum_service1:
+  service1:
     build:
-      context: ./sum_service
-    container_name: sum_service1
+      context: ./service
+    container_name: service1
     ports:
       - "8081:8081"
     environment:
       - APP_PORT=8081
 
-  sum_service2:
+  service2:
     build:
-      context: ./sum_service
-    container_name: sum_service2
+      context: ./service
+    container_name: service2
     ports:
       - "8082:8082"
     environment:
       - APP_PORT=8082
 
-  sum_aggregator:
+  svc_aggregator:
     build:
-      context: ./sum_service
-    container_name: sum_aggregator
+      context: ./service
+    container_name: svc_aggregator
+    environment:
+      - APP_PORT=8083
+    command: "http://service1:8081/get_value,http://service2:8082/get_value"
+    ports:
+      - "8083:8083"
+    depends_on:
+      - service1
+      - service2
+  
+  svc_common:
+    build:
+      context: ./service
+    container_name: svc_common
     environment:
       - APP_PORT=8080
-    command: "http://sum_service1:8081/get_value,http://sum_service2:8082/get_value"
+    command: "http://svc_aggregator:8083/get_value"
     ports:
       - "8080:8080"
     depends_on:
-      - sum_service1
-      - sum_service2
+      - svc_aggregator
 
   spammer:
     build:
       context: ./spammer
     container_name: spammer
-    command: ["http://sum_aggregator:8080/get_value", "100"]
+    command: ["http://svc_common:8080/get_value", "100"]
     ports:
       - "7777:7777"
     depends_on:
-      - sum_aggregator
+      - svc_aggregator
 
   pingr:
     build:
       context: ..
     container_name: pingr
+    environment:
+      - YANDEX_CLOUD_API_KEY=${YANDEX_CLOUD_API_KEY}
+      - YANDEX_CLOUD_FOLDER=${YANDEX_CLOUD_FOLDER}
+      - TG_API_URL=${TG_API_URL}
+      - TG_TOKEN=${TG_TOKEN}
+      - TG_CHAT_ID=${TG_CHAT_ID}
     volumes:
       - ./pingr/config.yaml:/app/config/config.yaml
     depends_on:
-      - sum_service1
-      - sum_service2
-      - sum_aggregator
+      - service1
+      - service2
+      - svc_aggregator
+      - svc_common
       - prometheus
 
   prometheus:
@@ -60,6 +79,7 @@ services:
     ports:
       - "9091:9090"
     depends_on:
-      - sum_service1
-      - sum_service2
-      - sum_aggregator
+      - service1
+      - service2
+      - svc_aggregator
+      - svc_common
